# thor-2.0

./: .gitignore  Makefile.am  Makefile.in  README.txt  configure  configure.ac  configure.in  make_thor-2.0.sh  thor-2.0.files  thor-2.0.includes
TPSA/: .TPSALib.inc~.swp  LieLib.f  Makefile.am  TPSALib.f  TPSALib.inc.02.20  TPSALib.inc.02.21  TPSALib_prm.f  bbff.f  dafor.f  dafor.in  dafor.mk  etwigg.f  fort.2  tmp.f  tpsa_etwigg.cc
TPSA/.svn/: entries
TPSA/.svn/text-base/: LieLib.f.svn-base  TPSALib.f.svn-base  TPSALib.inc.01.16.svn-base  TPSALib.inc.svn-base  TPSALib_prm.f.svn-base  dafor.f.02.05.06.svn-base  dafor.f.svn-base  dafor.ref.svn-base  dafor.svn-base  etwigg.f.svn-base  foxy_etwigg.cc.svn-base  tpsa_etwigg.cc.02.19.06.svn-base
TPSA/config/.svn/: entries
projects/: configure.ac  fel.cmd.o3038124  make_projects.sh  thor.cc.02-03-10
projects/.svn/text-base/: H.dat.svn-base  H_long.dat.svn-base  K_b10.dat.svn-base  baseline_7.dat.svn-base  chromlat_3.ps.svn-base  chromlat_4.ps.svn-base  dnu_dAx_pert.out.svn-base  dtwoJ_phi.out.svn-base  fit_cell.svn-base  flat_file.ref.svn-base  get_bn.lat.svn-base  h_rnd.cc.svn-base  nus.dat.svn-base  sext_2.DWs_2.svn-base  sext_2.bare.svn-base  sext_2.dat.svn-base  sext_2.dat_1.svn-base  sext_2_DW.dat_05-07-08.svn-base  sext_2_Oct_2.dat.svn-base  sext_3.bare_5.svn-base  sext_3.ref.svn-base  sext_rnd_1.dat.svn-base  track_H_3.dat.svn-base  track_H_4.dat.svn-base  tune_scan.prm.svn-base
projects/src/: Makefile.am  chk_drv_terms.cc  ctrl_a3.cc  delta.cc  delta_lo.cc  delta_lo2.cc  diamond_ii.cc  diamond_ii.cmd  diamond_ii.sh  fel.cc  get_dnu.cc  gustavo.cc  inversion_1.cc  max_4u.cc  max_4u_2.cc  max_4u_3.cc  max_4u_4.cc  mpole_scheme.cc  nl_ns.cc  nl_opt.cmd  nl_pwl.cc  nl_pwl.cmd  nl_pwl.sh  param_type.cc  param_type.h  poincare_map.cc  quad2d.cc  quad3d.cc  sext_resp_mat.cc  sls_2.cc  sls_2.cmd  sls_2.sh  sxt_resp_mat.cc  tbs.cc  tbs.cmd  tbs.sh  thor.cc  thor.cmd  tst_cg.cc  tune_conf.cc  (+6 more)
projects/src/Powell/src/: Makefile.am  main  main.cc  main.f  main2.cc  newuoa.cc  newuoa.f
projects/tme/1/: get_bn.lat  tme.cmd.o2862163
thor/src/: Makefile.am  Makefile.in  field.cc  prt_mfile.cc  radia2tracy.cc  rd_mfile.cc  si.cc  thor_lib.cc  tools.cc  tpsa_for_pm.cc
thor/src/.svn/: entries
thor/src/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  Makefile.ref.svn-base  field.cc.svn-base  log.svn-base  prt_mfile.cc.svn-base  radia2tracy.cc.svn-base  rd_mfile.cc.svn-base  si.cc.svn-base  thor_lib.cc.svn-base  tools.cc.svn-base  tpsa_for_pm.cc.svn-base
thor/wrk/: #log#  2D_int.cc  H_long.ps  H_min.cc  H_zero.cc  Makefile.am  Makefile.in  chrom2.out  chromlat.out  cod.out  commissioning_symm.lat  ctrl_a3.cmd  ctrl_a3.cmd.o3279070  dlinlat.out  dnu_dAx.out  dnu_dAy.out  dnu_dAy_pert.out  fel.cmd  fit_cell.cc.03-08-08  fit_tune_DW.dat_05-07-08  flat_file.dat_05-07-08  flat_file.ref  fmap.cmd  fmap.cmd.o3253066  fmap_dp.cmd.o3253067  get_SRM.cc  get_dnu.cmd.o3253065  get_dnu.sh  get_dnu2_1.out  get_dnu2_2.out  get_nu2_1.out  get_nu2_2.out  get_nu2_3.out  get_nu2_4.out  gmon.out  h_rnd.cc  h_rnd.cmd  linlat.out  linlat_IDs.out  max_iv_dnu.cc  (+55 more)
thor/wrk/.svn/: entries
thor/wrk/.svn/text-base/: GW.dat.svn-base  ID_corr_res.out.svn-base  K.dat.svn-base  SRM_lem3.dat.svn-base  WG.dat.svn-base  chrom2.out.svn-base  chromlat.out.svn-base  chromlat_5.ps.svn-base  chromlat_6.ps.svn-base  chromlat_7.ps.svn-base  chromlat_8.ps.svn-base  dnu_dAx.out.svn-base  fit_chrom.dat.svn-base  fit_tune.ref.svn-base  flat_file.dat.06-19-08.svn-base  flat_file.dat.svn-base  flat_file_bare.dat.svn-base  fort.32.svn-base  g.dat.svn-base  get_SRM.cc.svn-base  map.dat.svn-base  optics.cc.svn-base  sext_2.PFW_7.svn-base  sext_2.ref.04-03-08.svn-base  sext_2_9_fam.dat.svn-base  sext_2_DW.dat.svn-base  sext_2_Oct_2.dat.svn-base  sext_3.1.svn-base  sext_3.2.svn-base  sext_3.DW_3.svn-base  sext_3.DW_5.dat.svn-base  sext_3.DW_7.2.svn-base  sext_3.dat.Jan-18-2010.svn-base  sext_3.ds_chrom_2_geom_6.svn-base  sext_3.tmp.svn-base  thor.cc.04-03-09.svn-base  track.out.svn-base  track_H_1.dat.svn-base  track_H_2.dat.svn-base  tst_field.cc.svn-base
thor/wrk/Jun_2012/1_DW/ksi_2_2/oct/: ID_corr.out  chrom2.out  chromlat.out  dlinlat.out  dnu.ps  dnu_dAx.out  dnu_dAy.out  fmap.cmd.o3101237  fmap_dp.cmd.o3101238  get_bn.lat  get_dnu.cmd.o3101236  get_dnu2_1.out  get_dnu2_2.out  linlat1.out  linlat_IDs.out  linlat_IDs_corr.out  nl_opt.cmd  nl_opt.cmd.o3038212  track.out
thor/wrk/Jun_2012/1_DW/ksi_2_2/sext/: ID_corr_res.out  chrom2.out  chromlat.out  dlinlat.out  dnu.ps  dnu_dAx.out  dnu_dAy.out  fmap.cmd.o3101234  fmap_dp.cmd.o3101235  get_bn.lat  get_dnu.cmd.o3101233  get_dnu.sh  get_dnu2_1.out  get_dnu2_2.out  linlat1.out  linlat_IDs.out  linlat_IDs_corr.out  nl_opt.cmd.o3038198  track.out
thor/wrk/Jun_2012/1_DW/ksi_4_4/oct/: get_dnu2_1.out  (+2 more)
thor/wrk/Jun_2012/bare/CDR/: beam_envelope.out  chrom2.out  chromlat.out  dnu.ps  dnu_dAx.out  dnu_dAy.out  fmap.cmd.o3031654  fmap_dp.cmd.o3031655  get_bn.lat  get_dnu.cmd.o3031653  linlat.out  linlat_err.out  nl_opt.cmd  nl_opt.cmd.o3031616  track.out
thor/wrk/Jun_2012/bare/baseline/: beam_envelope.out  chrom2.out  chromlat.out  dnu.ps  dnu_dAx.out  dnu_dAy.out  fmap.cmd.o3031657  get_bn.lat  get_dnu.cmd.o3031656  linlat1.out  linlat_err.out  nl_opt.cmd  nl_opt.cmd.o3031617  track.out
thor/wrk/test/0/: #tmp.dat#  H_zero.cmd  H_zero.cmd.o122359  H_zero.prm  sext_2.ref  tune_scan.prm
thor/wrk/test/1/: H_min.cmd  H_min.cmd.o122331
thor/wrk/test/2/: H_min.cmd  H_min.cmd.o122332
thor/wrk/test/3/: H_min.cmd  H_min.cmd.o121377  tune_scan.prm
thor/wrk/tme/1/: chrom2.out  dnu_dAx.out  dnu_dAy.out  dynap.out  dynap_dp-2.5.out  dynap_dp2.5.out  linlat.out  linlat1.out  nl_opt.cmd  nl_opt.cmd.o2862160  track.out
thor/wrk/tme/2/: chrom2.out  dnu_dAx.out  dnu_dAy.out  dynap.out  dynap_dp-2.5.out  dynap_dp2.5.out  get_bn.lat  linlat.out  linlat1.out  nl_opt.cmd.o2862161  tme.cmd.o2862166  track.out
thor/wrk/tme/3/: chrom2.out  dnu_dAx.out  dnu_dAy.out  dynap.out  dynap_dp-2.5.out  dynap_dp2.5.out  tme.cmd  track.out
(+528 files in other folders)
