lib_LIBRARIES        = libTPSALib.a libLieLib.a

libTPSALib_a_SOURCES = TPSALib.f

libLieLib_a_SOURCES  = LieLib.f

#AM_FFLAGS   = -g -O2 -Wall -fbounds-check -fPIC -mcmodel=medium
#AM_FFLAGS   = -g -O2 -Wall -fbounds-check -fPIC -mcmodel=large -fstack-arrays
AM_FFLAGS   = -g -O2 -Wall -fbounds-check -fPIC -mcmodel=large
FFLAGS   = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=large
